<resources>
    <string name="app_name">YourWeightOn</string>
    <string name="weight_title">What\'s your Weight on ...?</string>
    <string name="hint_weight">Enter your  weight</string>
    <string name="show_weight">Show Weight</string>
    <string name="mars">Mars</string>
    <string name="venus">Venus</string>
    <string name="jupter">Jupter</string>
    <string name="type_your_weight_text">Please, type your weight!</string>
</resources>
